Added Pagination in Get all by user and get all by Category